--- a/app/views/new_reviews/_form.html.erb
+++ b/app/views/new_reviews/_form.html.erb
@@ -397,17 +397,13 @@
 
 
 <!-- ERROR MESSAGES -->
-<% if flash.class.name != "String"%>
-<% flash.each do |key, value| %>
-<% if value.class.name != "String"%>
-<div class="flash <%=key%>">
+<% if @new_review.errors.any? %>
+<div class="flash alert">
 	<%= pluralize value.length, "errors"%> prevented your review from being created:<br />
-	<% value.each do |f|%>
-	* <%=f%><br />
+	<% @new_review.errors.full_messages.each do |e|%>
+		* <%=e%><br />
 	<% end %>
 </div>
-<% end %>
-<% end %>
 <% end %><!-- END ERROR MESSAGES -->
 
 
