--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -22,17 +22,13 @@ textarea {
 
 </style>
 <!-- ERROR MESSAGES -->
-<% if flash.class.name != "String"%>
-<% flash.each do |key, value| %>
-	<% if value.class.name != "String"%>
-	  <div class="flash <%=key%>">
-<%= pluralize value.length, "errors"%> prevented your message from being sent:<br />
-	<% value.each do |f|%>
-		* <%=f%><br />
+<% if @organization.errors.any? %>
+<div class="flash alert">
+	<%= pluralize value.length, "errors"%> prevented your organization from being created:<br />
+	<% @organization.errors.full_messages.each do |e|%>
+		* <%=e%><br />
 	<% end %>
-  </div>
-<% end %>
-<% end %>
+</div>
 <% end %><!-- END ERROR MESSAGES -->
 
 <% if user_signed_in? && current_user.admin?%>
