--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -395,17 +395,13 @@ div.star-rating{background:transparent!important;overflow:hidden!important;}
 
 
 <!-- ERROR MESSAGES -->
-<% if flash.class.name != "String"%>
-<% flash.each do |key, value| %>
-	<% if value.class.name != "String"%>
-	  <div class="flash <%=key%>">
-<%= pluralize value.length, "errors"%> prevented your review from being saved:<br />
-	<% value.each do |f|%>
-		* <%=f%><br />
+<% if @review.errors.any? %>
+<div class="flash alert">
+	<%= pluralize value.length, "errors"%> prevented your review from being created:<br />
+	<% @review.errors.full_messages.each do |e|%>
+		* <%=e%><br />
 	<% end %>
-  </div>
-<% end %>
-<% end %>
+</div>
 <% end %><!-- END ERROR MESSAGES -->
 
 <body>
