--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -61,7 +61,7 @@
 		<% if f.overall <= 2 %>
 		<p class="poor"><%= f.overall%></p>
 		<% end %></td>
-	<td width ="40%"><%= f.truncated200.html_safe %></td>
+	<td width ="40%"><%= (truncate f.body.gsub(%r{</?[^>]+?>}, ''), :length =>100).html_safe %></td>
     <td width="7%"><p class="goToContainer"><%= link_to 'Go', f %></p></td>
 	<td width="7%"><% if f.show %>
 	<%= link_to (image_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/hideReview.png"), "/reviews/#{f.id}/changeShow" %>
