fixing org profile

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -511,7 +511,7 @@
         </div>
 			
 		
-	<%= render :partial => "show_contents", :locals => {:organization => @presenter.this_organization, :overall => @presenter.overall, :presenter => @presenter}%>
+	<%= render :partial => "show_contents", :locals => {:organization => @presenter.this_organization, :presenter => @presenter}%>
 	
 	<div class="row">
 			<div class="twelve columns" id="reviewsContainer">
