--- a/app/views/organizations/_show_contents.html.erb
+++ b/app/views/organizations/_show_contents.html.erb
@@ -20,8 +20,7 @@
 
 			<br />
 			<br />
-			<p class="starRating"><%= render :partial => "bigStar", :locals => {:star => organization.roundup(overall)}%></p>
-			<%= overall %>
+			<p class="starRating"><%= render :partial => "bigStar", :locals => {:star => organization.roundup(presenter.overall)}%></p>
 			<br />
 
 			<p class="starRatingBasedOn">Based on <%= (pluralize @results.count, "reviews") unless @results.nil?%></p> 
