fixing org profile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -459,7 +459,7 @@ a.bannerLink:hover {
 <div class="row" class="reviewBoxInnerContainer">
 <p alt="Company Photo" class="companyPhotoContainer"><image src="<%=f.square_image.url%>" class="companyPhoto"></p>
 <p class="medium companyName"><a class="blue-link" href="/organizations/<%=f.id%>"><%=f.name %></a></p><br /><br />
-<div class="companyStarsContainer"><%= render :partial => "star", :locals => {:star => f.overall}%></div>
+<div class="companyStarsContainer"><%= render :partial => "star", :locals => {:star => Organization.overall(f)}%></div>
 <div class="companyDescriptionContainer"><p><%= (truncate f.description.gsub(%r{</?[^>]+?>}, ''), :length => 75).html_safe%>
 	</p></div></div>
 <p class="companyProgramsList">Programs: <% @programs = Program.where(:organization_id => f.id).limit(3)%>
