fixing page wrap

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -569,7 +569,7 @@ a.bannerLink:hover {
 </div>
 <!-- end mainContent-->
 </div><!-- end container-->
-
+</div>
 
 <!-- FEEDBACK POPUP -->
 
@@ -596,6 +596,7 @@ a.bannerLink:hover {
   </div>
 <% end %>	
 </div>
+
 
 	
 	<script type="text/javascript">
